# ut_anagramma

./: .dockerignore  .gitignore  .gitlab-ci.yml  AWSCodeBuild.yaml  Dockerfile  Jenkinsfile  Pipfile  README.rst  buildspec.yml  pyproject.toml  requirements.txt  setup.py
apache/: README.md  httpd.conf  newcert-pem.txt  newkey-pem.txt  newreq-pem.txt  ut-anagramma-crt.txt  ut-anagramma-csr.txt  ut-anagramma-key.txt
monitoring/: monitor_ua.sh
src/ut_anagramma/: Funktionen.py  app.yaml  cli.py  main.py  main_test.py  requirements.txt  words.txt
src/ut_anagramma/templates/: error.html  home.html  no_english.html  result.html  too_long.html
